<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookItemDetailsActivity">

    <TextView
        android:id="@+id/textview_book_item_name"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/textview_book_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText_bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edittext_name"
        app:layout_constraintStart_toEndOf="@+id/textview_book_item_name"
        app:layout_constraintTop_toTopOf="@+id/textview_book_item_name"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_item_details_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/button_OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_item_details_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_CANCEL"
        app:layout_constraintBottom_toBottomOf="@+id/button_item_details_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintStart_toEndOf="@+id/button_item_details_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>